# SpotAmp

./: .env.example  README.md  metadata.json  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  llama_android.cpp
app/src/main/java/com/example/: MainActivity.kt
app/src/main/java/com/example/data/: BackendApiService.kt  BackendHomeMapper.kt  GeminiApi.kt  HomeRecommendationEngine.kt  LastFmScrobbler.kt  LibraryCleanupSuggestionService.kt  LibrarySyncState.kt  LibrarySyncWorker.kt  LocalCollectionSuggestionService.kt  LocalDjBlurbService.kt  LocalMetadataTagService.kt  MusicDatabase.kt  MusicRepository.kt  PlaybackCommandExecutor.kt  PlexApi.kt  PlexPagination.kt  PlexSettingsManager.kt  RadioService.kt  RecommendationEngine.kt  RecommendationExplanationService.kt  TokenSafety.kt  (+2 more)
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/com/example/: AIOutputValidatorTest.kt  DeterministicSamplingTest.kt  ExampleRobolectricTest.kt  GreetingScreenshotTest.kt  LibraryCleanupSuggestionServiceTest.kt  LocalCollectionSuggestionServiceTest.kt  LocalDjBlurbServiceTest.kt  LocalMetadataTagServiceTest.kt  MusicDatabaseMigrationTest.kt  PlaybackStateRestorationTest.kt  PlexLibraryMappingTest.kt  PlexPaginationTest.kt  RadioServiceTest.kt  RecommendationExplanationServiceTest.kt  SmartSearchServiceTest.kt  TokenSafetyTest.kt  TrackCacheSyncPolicyTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: run-debug.ps1
(+26 files in other folders)
